# leaguepedia_parser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
leaguepedia_parser/: __init__.py
leaguepedia_parser/parsers/: player_parser.py  team_parser.py
leaguepedia_parser_thomasbarrepitous/: __init__.py  logger.py
leaguepedia_parser_thomasbarrepitous/parsers/: champions_parser.py  contracts_parser.py  game_parser.py  items_parser.py  player_parser.py  roster_changes_parser.py  scoreboard_players_parser.py  standings_parser.py  team_parser.py  tournament_roster_parser.py
leaguepedia_parser_thomasbarrepitous/transmuters/: field_names.py  game.py  picks_bans.py
tests/: conftest.py  test_champions.py  test_contracts.py  test_extensions.py  test_game.py  test_integration_extensions.py  test_items.py  test_roster_changes.py  test_scoreboard_players.py  test_standings.py  test_team.py
