[tool.poetry]
name = "leaguepedia_parser_thomasbarrepitous"
version = "0.0.4"
description = "A fork of Tolki's parser for Leaguepedia data."
authors = ["ThomasBP <barrepitousthomas@gmail.com>", "Tolki <gary.mialaret@gmail.com>"]
license = "MIT"
repository = "https://github.com/thomasbarrepitous/leaguepedia_parser"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mwclient = "^0.10.1"
lol-dto = "^2.0.0"
lol-id-tools = "^2.0.0"
mwrogue = "^0.1.0"
rapidfuzz = "<3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
